substrate/frame/revive/ui-tests/src/ui/precompiles_ui.stderr
error[E0080]: evaluation panicked: Precompiles with duplicate matcher detected
 --> $WORKSPACE/substrate/frame/revive/src/precompiles.rs
  |
  |             panic!("Precompiles with duplicate matcher detected")
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `<(PrecompileA<pallet_revive_ui_tests::runtime::Runtime>, PrecompileB<pallet_revive_ui_tests::runtime::Runtime>) as polkadot_sdk::pallet_revive::precompiles::Precompiles<pallet_revive_ui_tests::runtime::Runtime>>::CHECK_COLLISION` failed here

note: erroneous constant encountered
   --> $WORKSPACE/substrate/frame/revive/src/precompiles.rs
    |
    |     let _ = <Tuple as Precompiles<T>>::CHECK_COLLISION;
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
